--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -1,3 +1,4 @@
+@import url(./variables.module.less);
 * {
   margin: 0;
   padding: 0;
@@ -185,4 +186,8 @@ a {
 }
 .displayNodeFirstCheckbox .el-cascader-menu:first-of-type .el-checkbox {
   display: none;
+}
+
+.el-menu--collapse {
+  width: 51px !important;
 }
